--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
-
 {
   "name": "demo-repo",
   "version": "0.2.0",
   "description": "A sample package.json",
   "dependencies": {
-    "@primer/css": "21.1.1"
+    "@primer/css": "21.5.1"
   },
-  "license": "MIT"
+  "license": " MIT license"
 }
-
-
